--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".MainFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity="center_vertical"
+    tools:context=".MainFragment">
 
     <View
         android:id="@+id/view"
@@ -13,33 +14,43 @@
 
     <TextView
         android:id="@+id/text_view_app_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textColor="@color/black"
-        android:textSize="8pt" />
+        android:layout_gravity="center"
+        android:textSize="12pt"
+        android:paddingBottom="5pt"/>
 
     <Button
         android:id="@+id/start_ride_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/icon_button_start_ride"
         android:text="@string/start_ride_button" />
 
     <Button
         android:id="@+id/update_ride_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/icon_button_update_ride"
         android:text="@string/update_ride_button" />
 
     <Button
         android:id="@+id/list_rides_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/icon_button_list_rides"
         android:text="@string/list_rides_button" />
 
-    <ListView
-        android:id="@+id/list_rides_view"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_rides_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:itemCount="5" />
 
 </LinearLayout>
