--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:icon="@drawable/baseline_home_24"
+        android:icon="@drawable/icon_menu_home"
         android:title="@string/nav_home"  />
 
     <item
         android:id="@+id/message"
-        android:icon="@drawable/baseline_start_24"
+        android:icon="@drawable/icon_button_start"
         android:title="@string/nav_start" />
 
     <item
